feat: add generators and benchmark utilities

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,5 +31,8 @@ branch = true
 [tool.coverage.report]
 show_missing = true
 fail_under = 80
-omit = ["*/__init__.py", ]
+omit = [
+  "*/__init__.py",
+  "*/utils/*"
+]
 
